--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="happyChicken.css">
         <title>Happy Mrs. Chicken</title>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="highScores.html">High Scores</a>
+        </nav>
     </head>
     <body>
         <header>
